[package]
name = "rust_awk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
regex = "1.5.4"
code_parser = { path = "./code_parser" }

[lib]
name = "rust_awk_lib"
path = "src/lib.rs"

[[bin]]
name = "rust_awk_bin"
path = "src/bin.rs"

[workspace]
members = [
    "code_parser"
]
